@@ -1,3 +1,5 @@
+2008/07/09
+	50. Change dependency in unitTesting (testKwsDirectPath -> testKineoWorks).
 2008/07/03
 	49. Fix Typo in documentation.
 2008/07/08
